css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Roboto', sans-serif;
}

.container{
    height: 100vh;
    width: 100vw;
    background-color: aqua;
    position: relative;
}
main{
    height: 100%;
    display: flex;
}


.main-content{
    width: 100%;
    height: 100%;
    overflow-y: scroll;
}

.navbar{
    width: 100%;
    height: 100px;
    background-color: rgb(45, 45, 45);
}

footer{
    width: 100%;
    height: 100px;
    background-color: lightgrey;
    position: fixed;
    left: 0;
    bottom: 0;
}

.button{
    color: white;
    border: 1px solid white;
    padding: 10px 25px;
    border-radius: 20px;

}

/* --------------------------- utility ----------------------- */

/* --------------------------- navbar ----------------------- */

.navbar ul{
    list-style: none;
}

.navbar ul li a{
    text-decoration: none;
}
.navbar{
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

/* --------------------------- sidebar ----------------------- */
.sidebar{
    height: calc(100% - 100px);
    width: 20%;
    padding: 0 20px;
    background-color: black;
    color: rgb(99, 99, 99);
}
.content-logo{
    width: 100%;
    height: 100px;
    border: 1px solid red;
}
.content-logo img{
    width: 80%;
    padding-top: 10px;
}

.search-playlist{
    position: relative;
}
.search-playlist ul li{
    list-style: none;
    margin-bottom: 10px;
    
}
.search-playlist ul li a{
    text-decoration: none;
    color: rgb(99, 99, 99);

}
.search-playlist .fas{
    position: absolute;
    font-size: 30px;
}
.search-playlist .icon span{
    margin-left: 40px;
}

.search-playlist .icon{
    height: 30px;
    line-height: 30px;
    margin: 10px 0;
}
.icon .fas{
    font-size: 30px;
}
.add-playlist span{
    margin-left: 30px;
}

.color-white:hover{
    color: white;
    border-left: 1px solid greenyellow;
}
.search-playlist h4{
    margin: 10px 0;
    color: white;
}

.search-playlist .add-playlist{
    border: 1px solid black;
    height: 50px;
    line-height: 50px;
    position: relative;

}
.fas.fa-plus-square{
    font-size: 50px;
    position: absolute; 
    color: lightgray;   
}
.add-playlist span{
    padding-left: 30px;
}
.search-playlist p{
    margin: 15px 0;
}

.link-utility{
    height: calc(100% - 100px);
    padding: 5px 0;
    color: rgb(99, 99, 99);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.user hr{
    margin: 10px 0;  
}
.name-user .fas.fa-user{
    font-size: 28px;
}

.name-user{
    height: 28px;    
    line-height: 28px;
    color: white;
    font-weight: bold;
}

/* --------------------------- main content ----------------------- */

/* --------------------------- nav-content ----------------------- */


.content{
    height: 100%;
    width: 100%;
    background-color: rgb(0, 103, 238);
    
}
.nav-content{
    text-align: center;
    height: 100px;
    border: 1px solid black;
}
.nav-content ul{
    height: 100px;
    line-height: 100px;
}
.nav-content ul li{
    display: inline-block;
}
.nav-content ul li a{
    text-decoration: none;
    color: rgb(99, 99, 99);
    padding: 0 20px;
}
.nav-content ul li a:hover{
    color: white;
    text-decoration: underline;
}

/* --------------------------- container-album ----------------------- */

.container-album{
    padding: 10px 20px;
}
.container-album p{
    font-size: 12px;
    margin-top: 10px;
}
.container-album h2{
    color: white;
}

.info-track{
    width: 100%;
    margin: 20px 0;
    display: flex;
    flex-wrap: wrap;
    overflow: auto;
}

.track-played{
    width: 200px;
    text-align: center;
    /* border: 1px solid black; */
    margin-right: 30px;
}
.track-played .icone-image {
    width: 200px;
}
.icon-image img{
    width: 100%;
}
.track-played h4{
    margin: 5px 0;
    color: white;
}

